# HVAC_Analytics

./: .gitignore  BACKEND_INTEGRATION_SUMMARY.md  BATCH_FEATURE_MAPPING_WORKFLOW.md  COMMIT_PENDING.md  COMMIT_SUMMARY.md  DATA_PERSISTENCE_PLAN.md  DATA_PERSISTENCE_TASKS.md  DEVELOPMENT_SETUP.md  EXAMPLES.md  FEATURE_MAPPING_SUMMARY.md  FEATURE_MAPPING_UI_WORKFLOW.md  FEATURE_MAPPING_V2_GUIDE.md  FRONTEND_MIGRATION_GUIDE.md  HANDOFF.md  MODEL_DELETE_FEATURE.md  README.md  UI_FEATURE_MAPPING_USAGE.md  UI_V2_INTEGRATION_SUMMARY.md  check_batch.py  check_columns.py  check_dtypes.py  commit_changes.bat  convert_pdf.py  daily_report_20260202.html  etl_ui.py  example_feature_mapping_v2.py  generate_report.py  hvac_feature_classification_summary.md  hvac_feature_matcher_example.py  main.py  mapping_editor_ui.py  md_to_pdf.py  phase1_progress_report.html  phase1_progress_report.md  pyproject.toml  requirements.txt  restart_ui.bat  restart_ui.py  start_development.bat  start_ui.sh  (+12 more)
HVAC_Cleaning_Visualization/: GITHUB_TUTORIAL.md  README.md  RUNBOOK.md  app.py  data_cleaning_visualization_prd.md  data_parser.py  data_pipeline.py  ml_pipeline.py  requirements.txt
_backup_20260203/: main.py
backend/: README.md  debug_json.py  debug_json2.py  debug_preview.py  main.py  requirements.txt  start_server.bat  test_api.py  test_api_full.py  test_quick.py
config/: FEATURE_MAPPING_GUIDE.md  hvac_feature_classification.json  settings.yaml
docs/: generate_prds_html.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/: README.md  (+5 more)
(+195 files in other folders)
