[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvac-analytics"
version = "0.1.0"
description = "HVAC Chiller Plant Analytics and Optimization Engine"
authors = [
    {name = "HVAC Team"}
]
requires-python = ">=3.9"
dependencies = [
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "scipy>=1.11.0",
    "fire>=0.5.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]
